--- a/style.css
+++ b/style.css
@@ -98,6 +98,11 @@
     box-shadow: 5px 10px 15px rgb(29, 31, 27);
     border-radius: 10px;
 }
+.kits p{
+    font-size: 17px;
+    font-weight: 600;
+    color: rgb(76, 221, 40);
+}
 .kits:hover{
     transform: scale(0.8);
 }
@@ -132,7 +137,7 @@ football fan shop styles
 }
 .products img{
     width: 200px;
-    height: 150px;
+    height: 190px;
     padding: 10px;
     border-radius: 10px;
     border:3px solid;
@@ -214,6 +219,7 @@ footer{
     .copa-banner img{
         width: 330px;
         height: 260px;
+        margin-left: 20px;
     }
     .players, .kit-gallery, .products-item{
         display: grid;
