--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 *{
     margin: 0;
     padding: 0;
+    
 }
 /*---------
  Top Header styles
  ------ */
-.copa-container{
+ .copa-container{
     width: 100%;
-    height: 500px;
+ }
+ 
+.copa-section{
+    width: 100%;
+    height: 700px;
     background-color: blue;
     display: flex;
     align-items: center;
@@ -44,7 +49,11 @@
 /* ----------
    main section style
    -------------  */
+.main-section{
+    width: 100%;
+}
 .top-player{
+    width: 100%;
     display: flex;
     justify-content: center;
     margin-top: 70px;
@@ -88,6 +97,7 @@
     line-height: 26px;
 }
 /* teams kits  styles */
+
 .kits-container{
     width: 100%;
     display: flex;
@@ -106,6 +116,8 @@
     margin-top:30px ;
     grid-row-gap: 20px;
     grid-column-gap: 30px;
+   
+    padding:20px
 }
 .kits{
     width: 310px;
@@ -192,18 +204,13 @@ football fan shop styles
 /* ----------
 footer area styles 
 ---------- */
-footer{
+
+.logo-container{
     width: 100%;
     height: 350px;
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-.logo-container{
-    width: 485px;
-    height: 213px;
-    padding: 20px;
 }
 .football-logo{
     width: 484px;
@@ -233,8 +240,9 @@ footer{
 /* -------------responsive for mobile device
 --------------  */
 @media only screen and (max-width:688px){
-    .copa-container{
-        width: 100%;
+ 
+
+    .copa-section{
         height: 700px;
         display: grid;
         grid-template-columns: repeat(1 , 1fr);
@@ -243,25 +251,60 @@ footer{
         font-size: 36px;
     }
     .copa-banner img{
-        width: 330px;
+        width: 300px;
         height: 260px;
         margin-left: 20px;
     }
-    .players, .kit-gallery, .products-item{
+    .players{
         display: grid;
         grid-template-columns: repeat(1 , 1fr);
+        width: 100vw;
+        margin-top: -69px;
+        grid-gap: 0;
+    }
+    .kits-container{
+        width: 100%;
+        display:flex;
+        flex-direction: column;
+        margin-top: 5px;
+        background-color: white;
+        
+    }
+     .kit-gallery{
+        display: grid;
+        grid-template-columns: repeat(1 , 1fr);
+        width: 100vw;
+        grid-gap: 0;
+        width: 100%;
+        background-color: white;
+        
+
+     }
+     .shop-container{
+        
+         margin-top: -10px;
+     }
+      .products-item{
+        display: grid;
+        grid-template-columns: repeat(1 , 1fr);
+        width: 100vw;
+        grid-gap: 0;
     }
     .logo-container{
-        width: 100%;
+        width: 300px;
+    }
+    .football-logo img{
+        width: 300px;
     }
 }
 
 /*-------------
  responsive for tab/ipad device -
  ------------- */
- @media only screen and (min-width:688px) and (max-width:992px){
+ @media only screen and (min-width:689px) and (max-width:992px){
+ 
     .copa-banner img{
-        width: 330px;
+        width: 100%;
         height: 260px;
         margin-left: 20px;
     }
